Attempts at correcting Chrome behavior on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2292,3 +2292,7 @@ color: #ffffff;
     box-shadow: none;
     background-color: #fff
 }
+
+input[type=date], input[type=time] {
+    -webkit-appearance: none;
+ }
